# vtol-briit-2022

./: CMakeLists.txt  README.md  package.xml  setup.py
include/: vtol_api.h
include/vtol_offb/: offb_node.h
launch/: api copy.launch  api.launch  test_servo.launch
msg/: GPSCoordinate.msg
src/: offb_node.cpp  run.cpp  run_server.py  vtol_api.cpp
src/briit/: run_server.py  server.py
src/briit_server/: server_node.py
src/server/: server.py
src/test/: test_servo.cpp
